<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context="com.distributed.system.datausageapp.AddAccountActivity" >

    <TextView
        android:id="@+id/lbl_AddUser"
        style="@style/text_title_bl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAddUser"
        android:textAlignment="center"
        android:typeface="normal" />

    <TextView
        android:id="@+id/txtMsg"
        style="@style/Errormsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtFirstName"
            style="@style/text_large_bl"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/lblFirstName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/editview_lb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingRight="10dp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLastName"
            style="@style/text_large_bl"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/lblLastName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/editview_lb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEmailID"
            style="@style/text_large_bl"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/lblEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/editview_lb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtPhoneNumber"
            style="@style/text_large_bl"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/lblPhoneNum"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etPhoneNumber"
            style="@style/editview_lb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:paddingRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtQuota"
            style="@style/text_large_bl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/lblQuota"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/sbQuota"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dip"
            android:maxHeight="9dp"
            android:minHeight="9dp"
            android:progressDrawable="@drawable/seekbar_progress"
            android:thumb="@drawable/shine_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtThreshold"
            style="@style/text_large_bl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/lblThreshold"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/sbThreshold"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dip"
            android:maxHeight="9dp"
            android:minHeight="9dp"
            android:progressDrawable="@drawable/seekbar_progress"
            android:thumb="@drawable/shine_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtTurnOff"
            style="@style/text_large_bl"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/lblTurnOff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spTurnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:entries="@array/spTurnOff"
            android:paddingRight="10dp" 
            android:background="@drawable/btn_dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAddAccount"
            style="@style/button_bl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/btnAddAccount" />
    </LinearLayout>

</LinearLayout>